@@ -25,16 +25,18 @@ NEW ARGUMENTS
 
 * qmplot now accepts maptype.
 * several functions now have a force argument that demands re-downloading of maps.
-* get_googlemap now accepts an api_key argument for business users. (Thanks to Guy Carpenter for starting the process.)
+* get_googlemap now accepts an api_key argument for business users (thanks to Guy Carpenter for starting the process).
 * geocode and revgeocode now accept client and signature arguments for business users.
+* the style argument in get_googlemap is now much better (thanks @coxchristopher, @djhurio, and @mattmoehr).
 
 FIXES
 
 * fixed a bug in stamen cloudmade maps that resulted in a very (very) small miscalculation in the bottom right bounding box of each tile.
-* several spaces have been removed from google maps urls; in particular, language="zh-CN" now works properly.  (thanks to github user JiangXD.)
+* several spaces have been removed from google maps urls; in particular, language="zh-CN" now works properly.  (thanks to @JiangXD.)
 * unexported objects from ggplot2 and plyr are now properly handled.
 * get_googlemap now properly creates a fileDrawer when needed (thanks Eric Anderson).
 * authors attributions now use the person class.
+* style argument fixed in get_googlemap (thanks @mattmoehr).
 
 ggmap 2.3
 -------------------------------------------------------------------------
